[gd_scene load_steps=6 format=3 uid="uid://duq7wnfk3yhgj"]

[ext_resource type="Script" uid="uid://bypwf0t6sw25s" path="res://Scripts/UI/pixel_button.gd" id="1_fg6nx"]
[ext_resource type="FontFile" uid="uid://pjdle0u4t032" path="res://art/Fonts/Game Font.ttf" id="2_8k357"]
[ext_resource type="Texture2D" uid="uid://bgoqu20wkoyyq" path="res://art/UI/mediumButton1.png" id="2_glu2g"]
[ext_resource type="Texture2D" uid="uid://baa32jf6qg383" path="res://art/UI/mediumButton3.png" id="3_6s236"]
[ext_resource type="Texture2D" uid="uid://bvwn014v6aa1k" path="res://art/UI/mediumButton2.png" id="4_72gv1"]

[node name="PixelButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -566.0
offset_bottom = -329.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fg6nx")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 76.0
offset_bottom = 31.0
texture_normal = ExtResource("2_glu2g")
texture_pressed = ExtResource("3_6s236")
texture_hover = ExtResource("4_72gv1")

[node name="Label" type="Label" parent="TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.203922, 0.109804, 0.152941, 1)
theme_override_fonts/font = ExtResource("2_8k357")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
